Transfer layout from BitBucket

--- a/index.html
+++ b/index.html
@@ -1,8 +1,172 @@
-<html>
-	<head>
-		<title>DevFecta</title>
-	</head>
-	<body>
-		GitHub Website
-	</body>
+<!DOCTYPE html>
+<html lang="en-US">
+<head><title>DevFecta on BitBucket</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <!-- BootStrap 4 CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+    
+    <link rel="stylesheet" href="css/styles.css" />
+
+</head>
+<body>
+
+    <header class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <a href="" class="navbar-brand">
+                <img src="https://devfecta.bitbucket.io/images/Devfecta-Circle-White.png" class="navbar-brand-logo" />
+            </a>
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                    <a class="nav-link" href="http://devfecta.com" target="_blank">DevFecta.com <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item ">
+                            <a class="nav-link" href="https://bitbucket.org/devfecta/devfecta-public-repository/">
+                                <span class="fab fa-bitbucket"></span> 
+                                Public Repository
+                            </a>
+                    </li>
+                    <li class="nav-item ">
+                            <a class="nav-link" href="https://bitbucket.org/devfecta/devfecta-public-repository/wiki">
+                                <span class="fab fa-wikipedia-w"></span> 
+                                DevFecta Wiki
+                            </a>
+                    </li>
+                    <li class="nav-item">
+                            <a class="nav-link" href="https://www.linkedin.com/in/kkelm/" target="_blank">
+                                <span class="fab fa-linkedin"></span> 
+                                LinkedIn
+                            </a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="mailto:devfecta@gmail.com">Contact</a>
+                    </li>
+                </ul>
+                <!--
+                <form class="form-inline mt-2 mt-md-0">
+                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+                -->
+            </div>
+        </nav>
+    </header>
+
+    <main class="container">
+        <section class="pt-3">
+            <div class="card">
+                <div class="card-header">
+                    <h2>Work Experience</h2>
+                </div>
+                <div class="card-body d-flex flex-wrap">
+                    <div class="card col-xl-4 col-md-6 col-sm-12 border-0">
+                        <div class="card-body">
+                            <h5 class="card-title">Web Developer</h5>
+                            <p class="card-text">January 2014 – Present  It’s Advertising, LLC, Stoughton, WI</p>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">
+                                    It’s Advertising, LLC is a side project of mine, and I address any technical questions and 
+                                    issues for the company. Also, I developed the AdHound ad tracking web application 
+                                    which is written in PHP and MySQL
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="card col-xl-4 col-md-6 col-sm-12 border-0">
+                        <div class="card-body">
+                            <h5 class="card-title">Firefighter (Paid-On Call)</h5>
+                            <p class="card-text">January 2009 – Present  City of Fitchburg Fire Department, Fitchburg, WI</p>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">
+                                    Saving lives, also work with kids and adults at public fire safety education events
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="card col-xl-4 col-md-6 col-sm-12 border-0">
+                        <div class="card-body">
+                            <h5 class="card-title">Freelance Graphic Designer & Web Developer</h5>
+                            <p class="card-text">March 2008 – Present  Fitchburg, WI</p>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">
+                                    Designed and developed websites using an array of languages such as 
+                                    PHP, ASP.Net, CSS, HTML, and JavaScript
+                                </li>
+                                <li class="list-group-item">
+                                    Create logos and various graphics for clients
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="card col-xl-4 col-md-6 col-sm-12 border-0">
+                        <div class="card-body">
+                            <h5 class="card-title">Graphic Designer</h5>
+                            <p class="card-text">September 2003 – March 2008  WTS Paradigm, Middleton, WI</p>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">
+                                    Responsible for designing all advertising and promotional materials,  
+                                    including: package design, magazine ads, trade show materials such as booth graphics, 
+                                    and web design                            
+                                </li>
+                                <li class="list-group-item">
+                                    Developed the WTS Paradigm website using Fireworks and Dreamweaver,  
+                                    then imported the HTML code and CSS information into Visual Studio to produce 
+                                    ASP.Net files that are tied to a SQL database for displaying product information
+                                </li>
+                                <li class="list-group-item">
+                                    Software development experiences include writing product knowledge code in 
+                                    Visual Basic and C# .Net that the WTS Paradigm software uses to produce exact 
+                                    product quotes for WTS Paradigm clients                           
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="card col-xl-4 col-md-6 col-sm-12 border-0">
+                            <div class="card-body">
+                                <h5 class="card-title">Web Designer</h5>
+                                <p class="card-text">September 1999 - September 2003  Nasco, Fort Atkinson, WI</p>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">
+                                        Designed concepts for Nasco's e-commerce website using Fireworks, and then 
+                                        exported the approved layout to HTML code to create templates and apply CSS
+                                        information in Dreamweaver and BBEdit
+                                    </li>
+                                    <li class="list-group-item">
+                                        Worked with development team to implement web layouts for company website
+                                    </li>
+                                    <li class="list-group-item">
+                                        Trained new employees on the development process at Nasco
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    
+    <footer class="text-white text-center">
+        <script type="text/javascript">
+            document.write(new Date().getFullYear() + " &copy DevFecta");
+        </script>
+    </footer>
+
+    <!-- BootStrap 4 Javascript -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+</body>
 </html>
