--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
     </header>
 
     <main class="container">
+        <p>DevFecta, LLC is a web development, design, and consulting company based in Fitchburg, Wisconsin that offers professional website design, web development, 
+        and graphic design services. And try our consulting service if you just need a little help with a current web project.</p>
         <section class="pt-3">
             <div class="card">
                 <div class="card-header">
