--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 
     <main class="container">
         <p class="pt-2">DevFecta is a web development, design, and consulting company based in Fitchburg, Wisconsin that offers professional website design, web development, 
-        and graphic design services. And try our consulting service if you just need a little help with a current web project.</p>
+        and graphic design services. And try my consulting service if you just need a little help with a current web project.</p>
+        <p>DevFecta is owned and operated by me, Kevin Kelm.</p>
         <section class="pt-3">
             <div class="card">
                 <div class="card-header">
@@ -79,18 +80,6 @@
                                     It’s Advertising, LLC is a side project of mine, and I address any technical questions and 
                                     issues for the company. Also, I developed the AdHound ad tracking web application 
                                     which is written in PHP and MySQL
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="card col-xl-4 col-md-6 col-sm-12 border-0">
-                        <div class="card-body">
-                            <h5 class="card-title">Firefighter (Paid-On Call)</h5>
-                            <p class="card-text">January 2009 – Present  City of Fitchburg Fire Department, Fitchburg, WI</p>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">
-                                    Saving lives, also work with kids and adults at public fire safety education events
                                 </li>
                             </ul>
                         </div>
@@ -154,7 +143,7 @@
                                     </li>
                                 </ul>
                             </div>
-                        </div>
+                    </div>
                 </div>
             </div>
         </section>
