--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <h2>Work Experience</h2>
                 </div>
                 <div class="card-body d-flex flex-wrap">
-                    <div class="card col-xl-4 col-md-6 col-sm-12 border-0">
+                    <div class="card col-md-6 col-sm-12 border-0">
                         <div class="card-body">
                             <h5 class="card-title">Web Developer</h5>
                             <p class="card-text">January 2014 – Present  It’s Advertising, LLC, Stoughton, WI</p>
@@ -85,7 +85,7 @@
                         </div>
                     </div>
 
-                    <div class="card col-xl-4 col-md-6 col-sm-12 border-0">
+                    <div class="card col-md-6 col-sm-12 border-0">
                         <div class="card-body">
                             <h5 class="card-title">Freelance Graphic Designer & Web Developer</h5>
                             <p class="card-text">March 2008 – Present  Fitchburg, WI</p>
@@ -101,7 +101,7 @@
                         </div>
                     </div>
 
-                    <div class="card col-xl-4 col-md-6 col-sm-12 border-0">
+                    <div class="card col-md-6 col-sm-12 border-0">
                         <div class="card-body">
                             <h5 class="card-title">Graphic Designer</h5>
                             <p class="card-text">September 2003 – March 2008  WTS Paradigm, Middleton, WI</p>
@@ -125,7 +125,7 @@
                         </div>
                     </div>
 
-                    <div class="card col-xl-4 col-md-6 col-sm-12 border-0">
+                    <div class="card col-md-6 col-sm-12 border-0">
                             <div class="card-body">
                                 <h5 class="card-title">Web Designer</h5>
                                 <p class="card-text">September 1999 - September 2003  Nasco, Fort Atkinson, WI</p>
