--- a/index.html
+++ b/index.html
@@ -3,7 +3,22 @@
 <head><title>DevFecta on BitBucket</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <!-- <link rel="icon" href="favicon.ico" type="image/x-icon"> -->
+    <link rel="icon" href="~/favicon.png" rel="shortcut icon" type="image/png" />
+    <link rel="canonical" href="http://devfecta.com/">
+    <link rel="alternate" hreflang="en-us" href="http://devfecta.com/" />
+    <link rel="alternate" hreflang="en-us" href="http://www.devfecta.com/" />
+    <script>
+        (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-97065704-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 
     <!-- BootStrap 4 CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -159,5 +174,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
+    <script type='text/javascript'>
+        var $zoho = $zoho || { salesiq: { values: {}, ready: function () { $zoho.salesiq.floatbutton.visible('hide'); } } }; 
+        var d = document; s = d.createElement('script'); 
+        s.type = 'text/javascript'; 
+        s.defer = true; 
+        s.src = 'https://salesiq.zoho.com/devfectallc/float.ls?embedname=devfectallc'; 
+        t = d.getElementsByTagName('script')[0]; 
+        t.parentNode.insertBefore(s, t);
+    </script>
 </body>
 </html>
