--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <!-- <link rel="icon" href="favicon.ico" type="image/x-icon"> -->
-    <link rel="icon" href="~/favicon.png" rel="shortcut icon" type="image/png" />
+    <link rel="icon" href="./favicon.png" rel="shortcut icon" type="image/png" />
     <link rel="canonical" href="http://devfecta.com/">
     <link rel="alternate" hreflang="en-us" href="http://devfecta.com/" />
     <link rel="alternate" hreflang="en-us" href="http://www.devfecta.com/" />
@@ -33,7 +33,7 @@
     <header class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-dark">
             <a href="" class="navbar-brand">
-                <img src="https://devfecta.bitbucket.io/images/Devfecta-Circle-White.png" class="navbar-brand-logo" />
+                <img src="./images/Devfecta-Circle-White.png" class="navbar-brand-logo" />
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
