--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             </a>
                     </li>
                     <li class="nav-item">
-                            <a class="nav-link" href="https://www.linkedin.com/in/kkelm/" target="_blank">
+                            <a class="nav-link" href="https://www.linkedin.com/company/devfecta" target="_blank">
                                 <span class="fab fa-linkedin"></span> 
                                 LinkedIn
                             </a>
