Coverted to Angular Live

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<head><title>DevFecta on BitBucket</title>
+<head><title>DevFecta</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <!-- <link rel="icon" href="favicon.ico" type="image/x-icon"> -->
@@ -33,7 +33,7 @@
     <header class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-dark">
             <a href="" class="navbar-brand">
-                <img src="./images/Devfecta-Circle-White.png" class="navbar-brand-logo" />
+                <img src="./assets/Devfecta-Circle-White.png" class="navbar-brand-logo" />
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -76,93 +76,9 @@
         </nav>
     </header>
 
-    <main class="container">
-        <p class="pt-4">DevFecta is a web development, design, and consulting company based in Fitchburg, Wisconsin that offers professional website design, web development, 
-        and graphic design services. And try my consulting service if you just need a little help with a current web project.</p>
-        <p>DevFecta is owned and operated by me, Kevin Kelm.</p>
-        <section class="pt-3">
-            <div class="card">
-                <div class="card-header">
-                    <h2>Work Experience</h2>
-                </div>
-                <div class="card-body d-flex flex-wrap">
-                    <div class="card col-md-6 col-sm-12 border-0">
-                        <div class="card-body">
-                            <h5 class="card-title">Web Developer</h5>
-                            <p class="card-text">January 2014 – Present  It’s Advertising, LLC, Stoughton, WI</p>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">
-                                    It’s Advertising, LLC is a side project of mine, and I address any technical questions and 
-                                    issues for the company. Also, I developed the AdHound ad tracking web application 
-                                    which is written in PHP and MySQL
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="card col-md-6 col-sm-12 border-0">
-                        <div class="card-body">
-                            <h5 class="card-title">Freelance Graphic Designer & Web Developer</h5>
-                            <p class="card-text">March 2008 – Present  Fitchburg, WI</p>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">
-                                    Designed and developed websites using an array of languages such as 
-                                    PHP, ASP.Net, CSS, HTML, and JavaScript
-                                </li>
-                                <li class="list-group-item">
-                                    Create logos and various graphics for clients
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="card col-md-6 col-sm-12 border-0">
-                        <div class="card-body">
-                            <h5 class="card-title">Graphic Designer</h5>
-                            <p class="card-text">September 2003 – March 2008  WTS Paradigm, Middleton, WI</p>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">
-                                    Responsible for designing all advertising and promotional materials,  
-                                    including: package design, magazine ads, trade show materials such as booth graphics, 
-                                    and web design                            
-                                </li>
-                                <li class="list-group-item">
-                                    Developed the WTS Paradigm website using Fireworks and Dreamweaver,  
-                                    then imported the HTML code and CSS information into Visual Studio to produce 
-                                    ASP.Net files that are tied to a SQL database for displaying product information
-                                </li>
-                                <li class="list-group-item">
-                                    Software development experiences include writing product knowledge code in 
-                                    Visual Basic and C# .Net that the WTS Paradigm software uses to produce exact 
-                                    product quotes for WTS Paradigm clients                           
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="card col-md-6 col-sm-12 border-0">
-                            <div class="card-body">
-                                <h5 class="card-title">Web Designer</h5>
-                                <p class="card-text">September 1999 - September 2003  Nasco, Fort Atkinson, WI</p>
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item">
-                                        Designed concepts for Nasco's e-commerce website using Fireworks, and then 
-                                        exported the approved layout to HTML code to create templates and apply CSS
-                                        information in Dreamweaver and BBEdit
-                                    </li>
-                                    <li class="list-group-item">
-                                        Worked with development team to implement web layouts for company website
-                                    </li>
-                                    <li class="list-group-item">
-                                        Trained new employees on the development process at Nasco
-                                    </li>
-                                </ul>
-                            </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
+	<main class="container">
+		<app-root></app-root>
+	</main>
     
     <footer class="text-white text-center">
         <script type="text/javascript">
@@ -184,5 +100,5 @@
         t = d.getElementsByTagName('script')[0]; 
         t.parentNode.insertBefore(s, t);
     </script>
-</body>
+<script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule defer></script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
 </html>
