Trying to fix resume link

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/resume">
+                            <a class="nav-link" href="./resume">
                                     <span class="fa fa-file"></span> 
                                 Resume
                             </a>
