--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         ga('create', 'UA-97065704-1', 'auto');
         ga('send', 'pageview');
     </script>
-<link rel="stylesheet" href="styles.dd262095fe92e35f0fd8.css"></head>
+</head>
 <body>
         <header class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-dark">
@@ -61,12 +61,14 @@
                                 Contact
                             </a>
                         </li>
+                        <!--
                         <li class="nav-item">
                             <a class="nav-link" href="./resume">
                                     <span class="fa fa-file"></span> 
                                 Resume
                             </a>
                         </li>
+                        -->
                     </ul>
                     <!--
                     <form class="form-inline mt-2 mt-md-0">
@@ -98,5 +100,5 @@
         t = d.getElementsByTagName('script')[0]; 
         t.parentNode.insertBefore(s, t);
     </script>
-<script src="runtime-es2015.e8a2810b3b08d6a1b6aa.js" type="module"></script><script src="runtime-es5.e8a2810b3b08d6a1b6aa.js" nomodule defer></script><script src="polyfills-es5.2b9ce34c123ac007a8ba.js" nomodule defer></script><script src="polyfills-es2015.0ef207fb7b4761464817.js" type="module"></script><script src="scripts.aa0d04536ea9b826ee7e.js" defer></script><script src="main-es2015.3afa982ad8cf4a6644e1.js" type="module"></script><script src="main-es5.3afa982ad8cf4a6644e1.js" nomodule defer></script></body>
+<script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule defer></script><script src="scripts.js" defer></script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
 </html>
