Trying different link

--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
                                 Contact
                             </a>
                         </li>
-                        <!--
+                        
                         <li class="nav-item">
-                            <a class="nav-link" href="./resume">
+                            <a class="nav-link" href="#/resume">
                                     <span class="fa fa-file"></span> 
                                 Resume
                             </a>
                         </li>
-                        -->
+                        
                     </ul>
                     <!--
                     <form class="form-inline mt-2 mt-md-0">
