--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                        <a class="nav-link" href="http://devfecta.com" target="_blank">DevFecta.com <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="http://devfecta.com">DevFecta.com <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item ">
                                 <a class="nav-link" href="https://bitbucket.org/devfecta/devfecta-public-repository/">
