--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <base href="https://devfecta.com/">    <title>DevFecta</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
+	<meta name="google-site-verification" content="Y98C6KDGxmHgiuIIX5qQ-I-pPdHoTfRX0adWwNgrC8o" />
     <!-- <link rel="icon" href="favicon.ico" type="image/x-icon"> -->
     <link rel="icon" href="./favicon.png" rel="shortcut icon" type="image/png" />
     <link rel="canonical" href="http://devfecta.com/">
