--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,23 @@
 <html lang="en">
 	<head>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-97065704-1"></script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-LPMLTJVFWX"></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
 			function gtag(){dataLayer.push(arguments);}
 			gtag('js', new Date());
 
-			gtag('config', 'UA-97065704-1');
+			gtag('config', 'G-LPMLTJVFWX');
 		</script>
 
 		<meta charset="utf-8" />
 		<link rel="icon" href="%PUBLIC_URL%/images/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="robots" content="index, follow" />
 		<meta name="theme-color" content="#003153" />
-		<meta http-equiv='cache-control' content='no-cache'>
-		<meta http-equiv='expires' content='0'>
-		<meta http-equiv='pragma' content='no-cache'>
+		<meta http-equiv='cache-control' content='no-cache' />
+		<meta http-equiv='expires' content='0' />
+		<meta http-equiv='pragma' content='no-cache' />
 		
 		<meta name="description" content="DevFecta is a Madison, Wisconsin based company that offers professional website design, web development, graphic design, and consulting services." />
 		
