--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,26 @@
 		<meta http-equiv='expires' content='0' />
 		<meta http-equiv='pragma' content='no-cache' />
 		
-		<meta name="description" content="DevFecta is a Madison, Wisconsin based company that offers professional website design, web development, graphic design, and consulting services." />
+		<meta name="title" property="og:title" content="DevFecta - Web Development, Design, and Consulting Services" />
+		<meta property="og:type" content="website" />
+		<meta name="image" property="og:image" content="https://devfecta.com/images/DevFecta-SocialMedia.jpg" />
+		<meta name="description" property="og:description" content="DevFecta is a Madison, Wisconsin based company that offers professional website design, web development, graphic design, and consulting services." />
+		<meta name="author" property="og:author" content="DevFecta">
+		<meta name="keywords" content="web developer, web site development companies, web development services, Madison Wisconsin" />
+
+		<meta property="og:url" content="https://devfecta.com/services" />
+		<meta property="og:site_name" content="DevFecta" />
+		
+		<meta property="article:publisher" content="https://www.facebook.com/devfecta" />
+
+		<meta name="twitter:card" content="summary" />
+		<meta name="twitter:site" content="@devfecta" />
+		<meta name="twitter:title" content="DevFecta" /> 
+		<meta name="twitter:description" content="DevFecta is a Madison, Wisconsin based company that offers professional website design, web development, graphic design, and consulting services." /> 
+		<meta name="twitter:image" content="https://devfecta.com/images/DevFecta-SocialMedia.jpg" />
+
+
+		<meta name="google-site-verification" content="TXUmZR54GaheRkSu6mtSicqLc3xzoX7SDhRr4csAPJs" />
 		
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		
