Created portfolio components.

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,9 @@
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		
 		<title>DevFecta - Development | Design | Consulting</title>
+
+		<script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
+
 		<base href="/">
 	</head>
 	<body>
@@ -61,6 +64,6 @@
 					document.getElementsByClassName("headerLogo")[1].style.height = "50px";
 				}
 			}
-			</script>
+		</script>
 	</body>
 </html>
